# celestial-fourpoint

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: celestial_fourpoint_basic.py
src/celestial_fourpoint/: __init__.py  accuracy.py  calculator.py
src/celestial_intertwiners/: __init__.py  astrometry_response.py  conventions.py  coupling_trees.py  finite_kernel_check.py  geometry.py  invariant_tensors.py  legs.py  transfers.py
src/celestial_intertwiners/fourpoint/: __init__.py  block_benchmark.py  connected_cumulants.py  conventions.py  coupled_blocks.py  crossing.py  descendants.py  direct_quadrature.py  fast_evaluator.py  helicity_responses.py  kuntz_benchmark.py  kuntz_formula.py  kuntz_projector.py  mixed_closed_form.py  mixed_kernels.py  pointwise_descendant.py  precomputed_spectral_kernel.py  reports.py  response_expansions.py  special_limits.py  spectral_convergence.py  spectral_sum_evaluator.py  spin_gaunt.py  tensor_reconstruction.py
tests/fourpoint/: test_block_benchmark.py  test_coupled_blocks.py  test_crossing_6j.py  test_fast_evaluator.py  test_four_spin_gaunt.py  test_kuntz_benchmark.py  test_kuntz_formula.py  test_kuntz_projector.py  test_mixed_closed_form.py  test_mixed_descendant_direct.py  test_physical_mixed_spectral.py  test_pointwise_descendant.py  test_precomputed_spectral_kernel.py  test_public_calculator.py  test_reports.py  test_response_expansions.py  test_special_limits.py  test_spectral_sum_evaluator.py  test_tensor_reconstruction.py
